homepage 'static footer'-related layout spacing fixes

--- a/app/assets/stylesheets/report.css.scss
+++ b/app/assets/stylesheets/report.css.scss
@@ -391,3 +391,8 @@
   }
 
 }
+
+.report {
+  margin:0 -20px;
+  padding-bottom:120px;
+}
