--- a/app/assets/stylesheets/tool/footer.css.scss
+++ b/app/assets/stylesheets/tool/footer.css.scss
@@ -70,7 +70,7 @@
 @media screen and ( max-width: $mobile_breakpoint ) {
 
   .footer {
-    position:static;
+    height:125px;
   }
 
   .footer--link,
